--- a/public/output.html
+++ b/public/output.html
@@ -13,7 +13,7 @@ Ne pas installer ce script sans le support WinMedia.
 <!--CURRENTSONG :-->
 
 
-~_top 1 ,isnull((select resource from path where history.media=path.media and extension=2),''),convert(nvarchar,history.hour,103),convert(nvarchar,history.hour,108),case when history.duration>13000 then performer else '' end, from history,media,category where station=STATIONINDEX and media!=1 and media=imedia and history.category=icategory order by ihistory desc~
+~_top 1 case when history.duration>110000 then album else '' end, from history,media,category where station=STATIONINDEX and media!=1 and media=imedia and history.category=icategory order by ihistory desc~
 
 <!--FORMULAIRE D'ENVOI :-->
 <!--FORM SEND :-->
@@ -21,10 +21,8 @@ Ne pas installer ce script sans le support WinMedia.
 <iframe name="uptitre" src="javascript:void(0)" width="350" height="100"></iframe>
 <form name='formulaire1' method='post'  action='URL AVEC LE .PHP ICI' target='uptitre'>
 
-<!--METADATAS CURRENTSONG :-->
-<textarea name="image" cols=1 rows=1 style="visibility:hidden">~?g~</textarea>
-<textarea name="starttime" cols=1 rows=1 style="visibility:hidden">~?h~ ~?i~</textarea>
-<textarea name="artist" cols=1 rows=1 style="visibility:hidden">~?j~</textarea>
+<!--METADATAS-->
+<textarea name="album" cols=1 rows=1 style="visibility:hidden">~?a~</textarea>
 ~_~
 
 </form>
