--- a/public/script.html
+++ b/public/script.html
@@ -13,7 +13,7 @@ Ne pas installer ce script sans le support WinMedia.
 <!--CURRENTSONG :-->
 
 
-~_top 1 {{SQL}} from history,media,category where station=STATIONINDEX and media!=1 and media=imedia and history.category=icategory order by ihistory desc~
+~_top 1 case when history.duration>13000 then performer else '' end, convert(nvarchar,history.hour,103),convert(nvarchar,history.hour,108), _latinos from history,media,category where station=STATIONINDEX and media!=1 and media=imedia and history.category=icategory order by ihistory desc~
 
 <!--FORMULAIRE D'ENVOI :-->
 <!--FORM SEND :-->
@@ -22,7 +22,9 @@ Ne pas installer ce script sans le support WinMedia.
 <form name='formulaire1' method='post'  action='URL AVEC LE .PHP ICI' target='uptitre'>
 
 <!--METADATAS-->
-{{TEXTAREAS}}
+<textarea name="artist" cols=1 rows=1 style="visibility:hidden">~?a~</textarea>
+<textarea name="starttime" cols=1 rows=1 style="visibility:hidden">~?b~ ~?c~</textarea>
+<textarea name="_latinos" cols=1 rows=1 style="visibility:hidden">~?d~</textarea>
 ~_~
 
 </form>
