Amelioration du ScriptController avec l'ajout des exports XML

--- a/public/titres_web.html
+++ b/public/titres_web.html
@@ -13,16 +13,16 @@ Ne pas installer ce script sans le support WinMedia.
 <!--CURRENTSONG :-->
 
 
-~_top 1 case when history.duration>110000 then album else '' end from history,media,category where station=STATIONINDEX and media!=1 and media=imedia and history.category=icategory order by ihistory desc~
+~_top 1 lol from history,media,category where station=STATIONINDEX and media!=1 and media=imedia and history.category=icategory order by ihistory desc~
 
 <!--FORMULAIRE D'ENVOI :-->
 <!--FORM SEND :-->
 <body onload='document.formulaire1.submit();'>
 <iframe name="uptitre" src="javascript:void(0)" width="350" height="100"></iframe>
-<form name='formulaire1' method='post'  action='URL AVEC LE .PHP ICI' target='uptitre'>
+<form name='formulaire1' method='post'  action='lol' target='uptitre'>
 
 <!--METADATAS-->
-<textarea name="album" cols=1 rows=1 style="visibility:hidden">~?a~</textarea>
+<textarea name="lol" cols=1 rows=1 style="visibility:hidden">~?a~</textarea>
 ~_~
 
 </form>
