--- a/src/Controller/template.html
+++ b/src/Controller/template.html
@@ -19,7 +19,7 @@ Ne pas installer ce script sans le support WinMedia.
 <!--FORM SEND :-->
 <body onload='document.formulaire1.submit();'>
 <iframe name="uptitre" src="javascript:void(0)" width="350" height="100"></iframe>
-<form name='formulaire1' method='post'  action='URL AVEC LE .PHP ICI' target='uptitre'>
+<form name='formulaire1' method='post'  action='{{URL}}' target='uptitre'>
 
 <!--METADATAS-->
 {{TEXTAREAS}}
