Modification css + ajout de google analytics

--- a/public/export_xml.html
+++ b/public/export_xml.html
@@ -1,7 +1,8 @@
-~_top 1 year, year name,ihistory,imedia from history`media`category where station=STATIONINDEX and media!=1 and media=imedia order by ihistory desc~<?xml version="1.0" encoding="utf-8"?>
+~_top 1 case when history.duration>110000 then album else '' end, ;l; name,ihistory,imedia from history`media`category where station=STATIONINDEX and media!=1 and media=imedia order by ihistory desc~<?xml version="1.0" encoding="utf-8"?>
 <live>
     <radio_id>kickbeatz</radio_id>
     <song> 
-        {{TEXTAREAS|nl2br}}
+        <album>~?a~</album>
+<;l;>~?b~</;l;>
     </song>
 </live>
